# reproducible_floating_sums

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ahrens2020.cpp  bob.cu  common.hpp  demmel2013.cpp  repro_blas_extract.cpp  repro_blas_extract_class.cpp  repro_vector.cpp  reproducible_floating_accumulator.hpp  test.py
src/: ahrens2020.cpp  reproducible_floating_accumulator.hpp
